--- a/LearningPod/res/values/strings.xml
+++ b/LearningPod/res/values/strings.xml
@@ -7,4 +7,26 @@
     <string name="Account_Selector">Existing Google Accounts</string>
 	<string name="btn_logout_from_google">Logout from Google</string>
     <string name="btn_revoke_access">Revoke Access</string>
+     <string name="drawer_open">Slider Menu Opened</string>
+    <string name="drawer_close">Slider Menu Closed</string>
+    
+    
+    
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>
+        <item>@drawable/planetbig</item>        
+    </array>
+    
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
 </resources>
